--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,60 @@ input, select, textarea {
 }
 
 
+/* Wall */
+.wall-item {
+      display: block;
+      margin: 0 0 24px 0;
+      padding: 12px;
+      background: #1e1e1e;
+      transition: all 200ms;
+}
+
+.wall-item:hover {
+      transform: translateY(-6px);
+      transition: all 200ms;
+}
+
+.wall-item > img {
+      display: block;
+      width: 100%;
+      margin: 0 0 30px 0;
+}
+
+.wall-item h2 {
+      text-align: center;
+      color: #fff;
+      font-size: 14px;
+      text-transform: uppercase;
+      margin-bottom: 0;
+      padding-bottom: 0;
+}
+
+.wall-column {
+      display: block;
+      position: relative;
+      width: 33.3333%;
+      float: left;
+      padding: 0 12px;
+      box-sizing: border-box;
+}
+
+@media (max-width: 640px) {
+      .wall-column {
+            width: 50%;
+      }
+}
+
+@media (max-width: 480px) {
+      .wall-column {
+            width: auto;
+            float: none;
+      }
+}
+
+
+
+
 /* Split Para */
 
 .split-para      { display:block;margin:0px;}
