--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald|Roboto:400,700");
+
 * {
   margin: 0%;
   padding: 0%;
@@ -233,7 +235,8 @@ input:checked + .slider:before {
 #featured-project,
 #references,
 #education,
-#academic-research {
+#academic-research,
+#professional-experience {
   padding: 0px 0px 0px 40px;
 }
 
@@ -379,7 +382,8 @@ input:checked + .slider:before {
 
 /*  Academics contents starts here */
 
-.college-list {
+.college-list,
+.profession-list {
   display: flex;
   flex-direction: column;
 }
@@ -391,23 +395,43 @@ input:checked + .slider:before {
   margin: 0px 0px 20px 0px;
 }
 
-.college-list-element-text {
+.college-list-element-text,
+.profession-list-element-text {
   display: flex;
   flex-direction: column;
   margin: 10px 0px 0px 0px;
 }
 
-.college-list-element-text h {
+.profession-list-element-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.college-list-element-text h,
+.profession-list-element h {
   font-size: 24px;
   line-height: 28px;
   font-weight: 500;
+}
+
+.profession-list-element {
+  display: flex;
+  flex-direction: column;
+}
+
+.profession-list-element-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .hide-underline {
   text-decoration: none;
 }
 
-.course-name {
+.course-name,
+.title-name {
   font-weight: 200;
   font-size: 16px;
   font-style: italic;
@@ -429,4 +453,46 @@ input:checked + .slider:before {
   padding: 0px 5px;
   flex-wrap: wrap;
   margin: 3px 3px;
+}
+
+.tl-container {
+  font-family: "Roboto", sans-serif;
+  margin: 15px 0px 0px 10px;
+}
+
+.tl-container ul.tl {
+  display: inline-block;
+}
+
+.tl-container ul.tl li {
+  list-style: none;
+  border-left: 1px dashed #3b7eeb;
+  padding: 0 0 20px 30px;
+  position: relative;
+}
+
+.tl-container ul.tl li:last-child {
+  border-left: 0;
+}
+.tl-container ul.tl li::before {
+  position: absolute;
+  left: -13px;
+  top: -5px;
+  content: " ";
+  border: 8px solid rgba(255, 255, 255, 0.74);
+  border-radius: 500%;
+  background: #258cc7;
+  height: 10px;
+  width: 10px;
+}
+
+ul.tl li .item-title {
+  font-weight: 500;
+  font-size: 16px;
+  padding-bottom: 5px;
+}
+
+ul.tl li .item-detail {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
 }
