--- a/assets/css/theme-1.css
+++ b/assets/css/theme-1.css
@@ -14219,7 +14219,7 @@ body {
   display: inline-block;
   width: 3px;
   height: 100%;
-  background: #c8cfd8;
+  background: #2f65bc;
   left: 6px;
   top: 4px;
   position: absolute;
@@ -14229,11 +14229,11 @@ body {
   content: "";
   display: inline-block;
   position: absolute;
-  left: -30px;
+  left: -32px;
   top: 3px;
   width: 15px;
   height: 15px;
-  border: 4px solid #6f8098;
+  border: 4px solid #2f65bc;
   background: #fff;
   border-radius: 50%;
 }
